# Parser

./: .gitignore  Cargo.toml  README.md
.devcontainer/: devcontainer.json
assets/: ejemplo.cat  errors.cat  expresiones.cat  if.cat  if.cat.vm  unwrap.cat
assets/algoritmos/: factorial.cat  factorial.cat.vm  fibonacci.cat  rectangulo.cat  tipo_numero.cat  tipo_numero.cat.vm
src/: analyze.rs  codegen.rs  lib.rs  main.rs  parse.rs  utils.rs
src/parse/: structures.rs  utils.rs
